GNOME Bugzilla – Bug 736942
androidmedia: logical disjunction consecutive goto, break statements
Last modified: 2014-11-08 14:15:06 UTC
Created attachment 286565 [details] [review] androidmedia: logical disjunction consecutive goto, break statements androidmedia: in gstamcvideodec.c logical disjunction consecutive goto, break statements
The breaks are left there to make the code more legible. It is a style issue, and since the code never gets there (since it goes to the goto) it doesn't affect anything. Sorry but I am going to decline this patch to keep the style consistent over GStreamer.
Review of attachment 286565 [details] [review]: As stated above
Comment on attachment 286565 [details] [review] androidmedia: logical disjunction consecutive goto, break statements After some more discussion this has been accepted. Will fix the commit message myself.
Comment on attachment 286565 [details] [review] androidmedia: logical disjunction consecutive goto, break statements Merged